Update LoanRepository.java